--- a/Project.WebUI/Project.WebUI.csproj
+++ b/Project.WebUI/Project.WebUI.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="NPOI" Version="2.4.1" />
   </ItemGroup>
 
 
